feat!: Upgrade minimum JDK version from JDK `1.7` to JDK `17` (#139)
* Update JDK baseline from JDK11 to JDK17
* Update Maven settings to be centered around JDK17
* Upgrade Spotbugs and PMD to newer versions
* Clean up JavaDoc and relax code formatter settings a bit
* Replace JSR305 and custom annotations with JSpecify
* Resolve blocker issues reported by newer static analyzers
* Update README
* Bump version to 2.0.0-SNAPSHOT since this is a breaking change
* Update README